chore: containing/containedIn/containingAnyOf joiners (#2022)
This is mostly a work of @ge0ffrey, I just rebased it and smoothened
some rough edges.
Merging in an unfinished and masked-out state; Geoff needs to handle the score corruptions.

---------

Co-authored-by: Geoffrey De Smet <gds.geoffrey.de.smet@gmail.com>