@@ -1,18 +1,16 @@
 package ai.timefold.solver.core.impl.bavet.common.joiner;
 
+import static ai.timefold.solver.core.impl.bavet.common.joiner.JoinerType.CONTAINED_IN;
 import static ai.timefold.solver.core.impl.bavet.common.joiner.JoinerType.CONTAINING;
-import static ai.timefold.solver.core.impl.bavet.common.joiner.JoinerType.DISJOINT;
+import static ai.timefold.solver.core.impl.bavet.common.joiner.JoinerType.CONTAINING_ANY_OF;
 import static ai.timefold.solver.core.impl.bavet.common.joiner.JoinerType.EQUAL;
 import static ai.timefold.solver.core.impl.bavet.common.joiner.JoinerType.GREATER_THAN;
 import static ai.timefold.solver.core.impl.bavet.common.joiner.JoinerType.GREATER_THAN_OR_EQUAL;
-import static ai.timefold.solver.core.impl.bavet.common.joiner.JoinerType.INTERSECTING;
 import static ai.timefold.solver.core.impl.bavet.common.joiner.JoinerType.LESS_THAN;
 import static ai.timefold.solver.core.impl.bavet.common.joiner.JoinerType.LESS_THAN_OR_EQUAL;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -55,32 +53,27 @@ class JoinerTypeTest {
     }
 
     @Test
-    void containing() {
-        Collection<Integer> collection = Arrays.asList(1);
-        assertThat(CONTAINING.matches(collection, 1)).isTrue();
-        assertThat(CONTAINING.matches(collection, 2)).isFalse();
+    void contain() {
+        assertThat(CONTAINING.matches(List.of(1, 3), 1)).isTrue();
+        assertThat(CONTAINING.matches(List.of(1, 3), 2)).isFalse();
     }
 
     @Test
-    void intersecting() {
-        Collection<Integer> left = Arrays.asList(1, 2, 3);
-        Collection<Integer> right = Arrays.asList(3, 4, 5);
-        assertThat(INTERSECTING.matches(left, right)).isTrue();
-        assertThat(INTERSECTING.matches(right, left)).isTrue();
-        assertThat(INTERSECTING.matches(left, Collections.emptySet())).isFalse();
+    void containedIn() {
+        assertThat(CONTAINED_IN.matches(1, List.of(1, 3))).isTrue();
+        assertThat(CONTAINED_IN.matches(2, List.of(1, 3))).isFalse();
     }
 
     @Test
-    void disjoint() {
-        Collection<Integer> first = Arrays.asList(1, 2, 3);
-        Collection<Integer> second = Arrays.asList(3, 4, 5);
-        assertThat(DISJOINT.matches(first, second)).isFalse();
-        assertThat(DISJOINT.matches(second, first)).isFalse();
-        Collection<Integer> third = Arrays.asList(4, 5);
-        assertThat(DISJOINT.matches(first, third)).isTrue();
-        assertThat(DISJOINT.matches(third, first)).isTrue();
-        // empty sets are disjoint
-        assertThat(DISJOINT.matches(Collections.emptyList(), Collections.emptySet())).isTrue();
-        assertThat(DISJOINT.matches(first, Collections.emptySet())).isTrue();
+    void containsAny() {
+        assertThat(CONTAINING_ANY_OF.matches(List.of(1, 2, 3), List.of(2))).isTrue();
+        assertThat(CONTAINING_ANY_OF.matches(List.of(1, 2, 3), List.of(6))).isFalse();
+        assertThat(CONTAINING_ANY_OF.matches(List.of(1, 2, 3), List.of(3, 4, 5))).isTrue();
+        assertThat(CONTAINING_ANY_OF.matches(List.of(3, 4, 5), List.of(1, 2, 3))).isTrue();
+        assertThat(CONTAINING_ANY_OF.matches(List.of(1, 2, 3), List.of(4, 5, 6))).isFalse();
+        assertThat(CONTAINING_ANY_OF.matches(List.of(1, 2, 3), List.of())).isFalse();
+        assertThat(CONTAINING_ANY_OF.matches(List.of(), List.of(1))).isFalse();
+        assertThat(CONTAINING_ANY_OF.matches(List.of(), List.of())).isFalse();
     }
+
 }
